--- a/UsersCanLogIn.Web/package.json
+++ b/UsersCanLogIn.Web/package.json
@@ -14,6 +14,7 @@
     "http-status-codes": "2.1.4",
     "vue": "2.6.11",
     "vue-class-component": "6.0.0",
+    "vue-mq": "^1.0.1",
     "vue-property-decorator": "7.0.0",
     "vue-router": "3.2.0"
   },
